chore: fix some sonar issues